Introduce css.reflection.Dump singleton
...and revert 882ac8f4cf1dc1b46f62b5ad08063bbfaaf953ab "Add a to_string()
function to the code generated for UNO IDL constant groups".  (But keep the
constants groups the latter had added to cppu/qa/cppumaker/types.idl, and use
them in the newly added CppunitTest_stoc_dump, for better or worse.)

Change-Id: I56e9eaeb1e45b83a72a25eceef13e719dc6f3a1e
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/149281
Reviewed-by: Tor Lillqvist <tml@collabora.com>
Tested-by: Jenkins

--- a/stoc/source/corereflection/reflection.component
+++ b/stoc/source/corereflection/reflection.component
@@ -25,4 +25,9 @@
     <service name="com.sun.star.reflection.CoreReflection"/>
     <singleton name="com.sun.star.reflection.theCoreReflection"/>
   </implementation>
+  <implementation name="com.sun.star.comp.stoc.Dump"
+      constructor="com_sun_star_comp_stoc_Dump_get_implementation"
+      single-instance="true">
+    <singleton name="com.sun.star.reflection.Dump"/>
+  </implementation>
 </component>
