--- a/svx/uiconfig/ui/accessibilitycheckentry.ui
+++ b/svx/uiconfig/ui/accessibilitycheckentry.ui
@@ -13,6 +13,7 @@
         <property name="visible">True</property>
         <property name="can-focus">False</property>
         <property name="hexpand">True</property>
+        <property name="wrap">True</property>
         <property name="selectable">True</property>
         <property name="xalign">0</property>
         <child internal-child="accessible">
