--- a/sw/uiconfig/swriter/ui/optcompatpage.ui
+++ b/sw/uiconfig/swriter/ui/optcompatpage.ui
@@ -236,6 +236,7 @@
                   <item translatable="yes" context="optcompatpage|format">Word-compatible trailing blanks</item>
                   <item translatable="yes" context="optcompatpage|format">Tolerate white lines of PDF page backgrounds for compatibility with old documents</item>
                   <item translatable="yes" context="optcompatpage|format">Hide paragraphs of database fields (e.g., mail merge) with an empty value</item>
+                  <item translatable="yes" context="optcompatpage|format">Render non-breaking spaces (NBSP) as standard-space-width (off for fixed size)</item>
                   <item translatable="yes" context="optcompatpage|format">&lt;User settings&gt;</item>
                 </items>
               </object>
