--- a/sc/uiconfig/scalc/ui/tpviewpage.ui
+++ b/sc/uiconfig/scalc/ui/tpviewpage.ui
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!-- Generated with glade 3.38.2 -->
+<!-- Generated with glade 3.40.0 -->
 <interface domain="sc">
   <requires lib="gtk+" version="3.20"/>
   <object class="GtkBox" id="TpViewPage">
@@ -20,7 +20,7 @@
             <property name="label-xalign">0</property>
             <property name="shadow-type">none</property>
             <child>
-              <!-- n-columns=1 n-rows=7 -->
+              <!-- n-columns=1 n-rows=8 -->
               <object class="GtkGrid" id="grid6">
                 <property name="visible">True</property>
                 <property name="can-focus">False</property>
@@ -373,13 +373,14 @@
             <property name="label-xalign">0</property>
             <property name="shadow-type">none</property>
             <child>
-              <!-- n-columns=3 n-rows=5 -->
+              <!-- n-columns=3 n-rows=4 -->
               <object class="GtkGrid" id="grid5">
                 <property name="visible">True</property>
                 <property name="can-focus">False</property>
                 <property name="margin-start">12</property>
                 <property name="margin-top">6</property>
                 <property name="row-spacing">3</property>
+                <property name="column-spacing">6</property>
                 <child>
                   <object class="GtkCheckButton" id="break">
                     <property name="label" translatable="yes" context="tpviewpage|break">_Page breaks</property>
@@ -396,7 +397,7 @@
                   </object>
                   <packing>
                     <property name="left-attach">0</property>
-                    <property name="top-attach">3</property>
+                    <property name="top-attach">2</property>
                     <property name="width">3</property>
                   </packing>
                 </child>
@@ -416,7 +417,7 @@
                   </object>
                   <packing>
                     <property name="left-attach">0</property>
-                    <property name="top-attach">4</property>
+                    <property name="top-attach">3</property>
                     <property name="width">3</property>
                   </packing>
                 </child>
@@ -426,24 +427,12 @@
                     <property name="can-focus">False</property>
                     <property name="label" translatable="yes" context="tpviewpage|grid_label">_Grid lines:</property>
                     <property name="use-underline">True</property>
+                    <property name="mnemonic-widget">grid</property>
                     <property name="xalign">0</property>
                   </object>
                   <packing>
                     <property name="left-attach">0</property>
                     <property name="top-attach">0</property>
-                  </packing>
-                </child>
-                <child>
-                  <object class="GtkLabel" id="color_label">
-                    <property name="visible">True</property>
-                    <property name="can-focus">False</property>
-                    <property name="label" translatable="yes" context="tpviewpage|color_label">_Color:</property>
-                    <property name="use-underline">True</property>
-                    <property name="xalign">0</property>
-                  </object>
-                  <packing>
-                    <property name="left-attach">0</property>
-                    <property name="top-attach">1</property>
                   </packing>
                 </child>
                 <child>
@@ -468,29 +457,6 @@
                   </packing>
                 </child>
                 <child>
-                  <object class="GtkMenuButton" id="color">
-                    <property name="visible">True</property>
-                    <property name="can-focus">False</property>
-                    <property name="receives-default">False</property>
-                    <property name="xalign">0</property>
-                    <property name="draw-indicator">True</property>
-                    <property name="label" translatable="no"></property>
-                    <child>
-                      <placeholder/>
-                    </child>
-                    <child internal-child="accessible">
-                      <object class="AtkObject" id="color-atkobject">
-                        <property name="AtkObject::accessible-description" translatable="yes" context="extended_tip|color">Specifies a color for the grid lines in the current document.</property>
-                      </object>
-                    </child>
-                  </object>
-                  <packing>
-                    <property name="left-attach">1</property>
-                    <property name="top-attach">1</property>
-                    <property name="width">2</property>
-                  </packing>
-                </child>
-                <child>
                   <object class="GtkLabel" id="lbCursor">
                     <property name="visible">True</property>
                     <property name="can-focus">False</property>
@@ -501,7 +467,7 @@
                   </object>
                   <packing>
                     <property name="left-attach">0</property>
-                    <property name="top-attach">2</property>
+                    <property name="top-attach">1</property>
                   </packing>
                 </child>
                 <child>
@@ -517,7 +483,7 @@
                   </object>
                   <packing>
                     <property name="left-attach">1</property>
-                    <property name="top-attach">2</property>
+                    <property name="top-attach">1</property>
                   </packing>
                 </child>
                 <child>
@@ -533,7 +499,7 @@
                   </object>
                   <packing>
                     <property name="left-attach">2</property>
-                    <property name="top-attach">2</property>
+                    <property name="top-attach">1</property>
                   </packing>
                 </child>
               </object>
@@ -702,23 +668,6 @@
       </object>
     </child>
   </object>
-  <object class="GtkSizeGroup" id="sizegroupLabel">
-    <widgets>
-      <widget name="grid_label"/>
-      <widget name="color_label"/>
-      <widget name="objgrf_label"/>
-      <widget name="diagram_label"/>
-      <widget name="draw_label"/>
-      <widget name="lbCursor"/>
-    </widgets>
-  </object>
-  <object class="GtkSizeGroup" id="sizegroupWidget">
-    <widgets>
-      <widget name="grid"/>
-      <widget name="color"/>
-      <widget name="objgrf"/>
-      <widget name="diagram"/>
-      <widget name="draw"/>
-    </widgets>
-  </object>
+  <object class="GtkSizeGroup" id="sizegroupLabel"/>
+  <object class="GtkSizeGroup" id="sizegroupWidget"/>
 </interface>
