--- a/extensions/uiconfig/spropctrlr/ui/labelselectiondialog.ui
+++ b/extensions/uiconfig/spropctrlr/ui/labelselectiondialog.ui
@@ -165,6 +165,11 @@
                 <property name="receives-default">False</property>
                 <property name="use-underline">True</property>
                 <property name="draw-indicator">True</property>
+                <child internal-child="accessible">
+                  <object class="AtkObject" id="noassignment-atkobject">
+                    <property name="AtkObject::accessible-description" translatable="yes" context="labelselectiondialog|extended_tip|nosssignement">Check the No assignment box to remove the link between a control and the assigned label field.</property>
+                  </object>
+                </child>
               </object>
               <packing>
                 <property name="expand">False</property>
@@ -186,5 +191,10 @@
       <action-widget response="-6">cancel</action-widget>
       <action-widget response="-11">help</action-widget>
     </action-widgets>
+    <child internal-child="accessible">
+      <object class="AtkObject" id="LabelSelectionDialog-atkobject">
+        <property name="AtkObject::accessible-description" translatable="yes" context="labelselectiondialog|extended_tip|LabelSelectionDialog">Specifies the source for the label of the control.</property>
+      </object>
+    </child>
   </object>
 </interface>
