Fix typo in code + add curly braces for "No assigment"
Change-Id: I58f01ede2d568c73bca697674a625cb1b13e5684
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/149762
Tested-by: Adolfo Jayme Barrientos <fitojb@ubuntu.com>
Reviewed-by: Adolfo Jayme Barrientos <fitojb@ubuntu.com>

--- a/extensions/uiconfig/spropctrlr/ui/labelselectiondialog.ui
+++ b/extensions/uiconfig/spropctrlr/ui/labelselectiondialog.ui
@@ -167,7 +167,7 @@
                 <property name="draw-indicator">True</property>
                 <child internal-child="accessible">
                   <object class="AtkObject" id="noassignment-atkobject">
-                    <property name="AtkObject::accessible-description" translatable="yes" context="labelselectiondialog|extended_tip|nosssignement">Check the No assignment box to remove the link between a control and the assigned label field.</property>
+                    <property name="AtkObject::accessible-description" translatable="yes" context="labelselectiondialog|extended_tip|noassignment">Check the “No assignment” box to remove the link between a control and the assigned label field.</property>
                   </object>
                 </child>
               </object>
