Hyphenate this compound adjective
Change-Id: I7e19c90fd0106f59398205579d7b5d60cbf4a07e
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/149945
Tested-by: Jenkins
Reviewed-by: Adolfo Jayme Barrientos <fitojb@ubuntu.com>

--- a/cui/uiconfig/ui/bulletandposition.ui
+++ b/cui/uiconfig/ui/bulletandposition.ui
@@ -699,7 +699,7 @@
                                     <property name="draw-indicator">True</property>
                                     <child internal-child="accessible">
                                       <object class="AtkObject" id="keepratio-atkobject">
-                                        <property name="AtkObject::accessible-description" translatable="yes" context="bulletandposition|extended_tip|keepratio">Check this box to preserve the height to width ratio of the graphic bullet.</property>
+                                        <property name="AtkObject::accessible-description" translatable="yes" context="bulletandposition|extended_tip|keepratio">Check this box to preserve the height-to-width ratio of the graphic bullet.</property>
                                       </object>
                                     </child>
                                   </object>
